# deep_researcher_demo

./: .gitignore  README.md  eval_deepsearchqa.sh  example.env  pyproject.toml  run_example.sh
claude-docx/: research-modes-and-search.md  research-walkthrough.md  search-call-chain.md  workflow.md
claude-docx/SAVED/: crawl4ai-setup.md
deep_researcher_demo/: __init__.py  __main__.py  agents.py  cli.py  config.py  json_utils.py  llm.py  progress.py  relevance.py  schemas.py  scrape_crawl4ai.py  search.py  workflow.py
eval/: AB_EXPERIMENT.md  EVAL_GUIDE.md  __init__.py  ab32b_experiment_summary.md  ab_32b_vs_30b_summary.md  ab_sync_0614_summary.md  analyze_phase1.py  compare_ab.py  deepsearchqa-starter-code.ipynb  gpu_monitor.sh  phase1_blend_cost_analysis.md  run_deepsearchqa.py  scoring.py
eval/DeepResearchBench/: run_drbench.py
eval/DeepResearchGym/: eval_citation_async.py  eval_citation_recall_async.py  eval_kpr_async.py  eval_quality_async.py  run_drgym.py
eval/TRASH/: AB_EXPERIMENT.md
eval/benchmarks/: README.md  harvest_gen.py  harvest_run_report.md  integration_changes.md  judge_adapter.py  scorer_apis_and_reference.md
eval/deepresearchqa/: judge.py  run_deepsearchqa.py
eval/results/: README.md
exp-docx/: 18-vllm-suffix-decoding.md  19-suffix-tree-explained.md  20-eagle-mtp-explained.md  parallel-generation-experiment-v2.md  parallel-generation-experiment.md
tests/: fakes.py  test_agents.py  test_cli.py  test_config.py  test_eval_scoring.py  test_eval_selection_resume.py  test_json_utils.py  test_progress.py  test_search.py  test_workflow.py
(+159 files in other folders)
