[project]
name = "deep-researcher-demo"
version = "0.1.0"
description = "A minimal pure-Python deep researcher workflow without LangChain or LangGraph."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "ddgs>=9.14.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
eval = [
    "datasets>=3.0",
    "pandas>=2.0",
]

[project.scripts]
deep-researcher-demo = "deep_researcher_demo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deep_researcher_demo*", "eval*"]
exclude = ["outputs*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
